--- a/client-web/package.json
+++ b/client-web/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "dev-turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,25 +15,32 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@headlessui/react": "1.7.10",
+    "@solana/web3.js": "1.73.2",
+    "bs58": "5.0.0",
     "clsx": "1.2.1",
+    "encoding": "0.1.13",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "0.7.6",
     "styled-components": "6.0.0-beta.2",
     "styled-jsx": "5.1.0",
-    "use-count-up": "3.0.1"
+    "use-count-up": "3.0.1",
+    "usehooks-ts": "2.9.1"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-no-ssr": "1.1.3",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "latest",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
-    "tailwindcss": "^3.1.6",
+    "prettier-plugin-tailwindcss": "0.2.2",
+    "tailwindcss": "3.2.6",
     "typescript": "4.7.4"
   }
 }
