--- a/client-web/package.json
+++ b/client-web/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.10",
+    "@solana/wallet-adapter-base": "0.9.20",
+    "@solana/wallet-adapter-react": "0.15.28",
+    "@solana/wallet-adapter-react-ui": "0.9.27",
+    "@solana/wallet-adapter-wallets": "0.19.11",
     "@solana/web3.js": "1.73.2",
     "bs58": "5.0.0",
     "clsx": "1.2.1",
